queue + stack & minor changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,11 @@
 project(GUIFromSratch )
+find_package(GTest REQUIRED)
+find_package(Threads REQUIRED)
 file(GLOB SOURCES "src/*/*.cpp")
+file(GLOB TESTS "tests/*/*.cpp")
 file(GLOB HEADERS "include/*")
 add_executable(main ${SOURCES})
-add_executable(main tests/test.cpp)
+add_executable(main ${TESTS})
+add_executable(main tests/main.cpp)
+target_link_libraries(main GTest::GTest GTest::Main Threads::Threads)
 target_include_directories(main PRIVATE ${HEADERS})
