hashmap, pair finished & other datatype reworked

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,6 @@ file(GLOB HEADERS "include/*")
 add_executable(main ${SOURCES})
 add_executable(main ${TESTS})
 add_executable(main tests/main.cpp)
+set(CMAKE_BUILD_TYPE Debug)
 target_link_libraries(main GTest::GTest GTest::Main Threads::Threads)
 target_include_directories(main PRIVATE ${HEADERS})
